2012-03-16  Genevieve Mak  <gmak@rim.com>

        [BlackBerry] viewportRect has changed to viewportSize
        https://bugs.webkit.org/show_bug.cgi?id=81262

        Reviewed by Antonio Gomes.

        Set size instead of rect in constructor.
        * WebKitSupport/InRegionScrollableArea.cpp:
        (BlackBerry::WebKit::InRegionScrollableArea::InRegionScrollableArea):

2012-03-16  Andrew Lo  <anlo@rim.com>

        [BlackBerry] Enable PAGE_VISIBILITY_API
        https://bugs.webkit.org/show_bug.cgi?id=81257

        Set Page visibility state for BlackBerry port.

        Reviewed by Rob Buis.

        * Api/WebPage.cpp:
        (BlackBerry::WebKit::WebPagePrivate::WebPagePrivate):
        (WebKit):
        (BlackBerry::WebKit::WebPagePrivate::setPageVisibilityState):
        (BlackBerry::WebKit::WebPagePrivate::setVisible):
        (BlackBerry::WebKit::WebPage::setVisible):
        (BlackBerry::WebKit::WebPagePrivate::notifyAppActivationStateChange):
        (BlackBerry::WebKit::WebPage::notifyAppActivationStateChange):
        * Api/WebPage_p.h:
        (WebPagePrivate):

2012-03-14  Arvid Nilsson  <anilsson@rim.com>

        [BlackBerry] Make sure WebPage and BackingStore don't crash without a Window
        https://bugs.webkit.org/show_bug.cgi?id=81099

        Reviewed by Rob Buis.

        Also rename the "compositing/blitting to main window" variables to
        instead refer to OpenGL compositing. The code paths it triggers are
        related to the BackingStore using OpenGL compositing, and can be useful
        even when there's no window.

        * Api/BackingStore.cpp:
        (BlackBerry::WebKit::BackingStorePrivate::isOpenGLCompositing):
        (BlackBerry::WebKit::BackingStorePrivate::render):
        (BlackBerry::WebKit::BackingStorePrivate::copyPreviousContentsToBackSurfaceOfWindow):
        (BlackBerry::WebKit::BackingStorePrivate::paintDefaultBackground):
        (BlackBerry::WebKit::BackingStorePrivate::blitContents):